syntax = "proto3";

package api.types;

// the permission levels
enum PermissionLevel {
  // the permission is not specified
  PERMISSION_LEVEL_UNSPECIFIED = 0;
  // the permission is public
  PERMISSION_LEVEL_PUBLIC = 1;
  // the permission is read
  PERMISSION_LEVEL_READ = 100;
  // the permission is write
  PERMISSION_LEVEL_WRITE = 200;
  // the permission is admin
  PERMISSION_LEVEL_ADMIN = 300;
}
